--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_activity_timeline">Home Timeline</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Compose Tweet</string>
-    <string name="title_activity_compose_tweet">ComposeTweetActivity</string>
+    <string name="title_activity_compose_tweet">Compose Tweet</string>
     <string name="submit">Tweet</string>
     <string name="whats_happening">What\'s happening?</string>
 
